# task-manager-api

./: .gitignore  Dockerfile  README.md  WORKFLOW.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 57f24ae125d0_criar_tabelas_iniciais.py
src/: config.py  database.py  main.py
src/models/: task.py  user.py
src/routers/: auth.py  task.py
src/schemas/: task.py  user.py
src/security/: auth.py
tests/: test_auth.py  test_tasks.py
