[project]
name = "task-manager-api"
version = "0.1.0"
description = ""
authors = [
    {name = "DBCBR",email = "dbcbr@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.51.0,<0.52.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)"
]

[tool.poetry]
packages = [{include = "task_manager_api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "black (>=26.5.1,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "*"
uvicorn = "*"
sqlalchemy = "*"
psycopg2-binary = "*"
bcrypt = "*"
python-jose = {extras = ["cryptography"], version = "*"}
pydantic = {extras = ["email"], version = "*"}
email-validator = "*"
python-multipart = "*"
pydantic-settings = "*"
alembic = "*"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::Warning:fastapi.*",
    "ignore::Warning:starlette.*"
]